tests/sources/invalid/borrow/for_in_move_errors.fire
// for-in ownership move errors

import @firescript/std.io.println;

fn consume(s: string) -> void {
    println(s);
}

msg: string = "loop-move";
nums: int32[] = [1, 2, 3];

for (n: int32 in nums) {
    consume(msg); // msg may move during loop iterations
    println(n);
}

println(msg); // Error: msg may have moved on loop path  //~ ERROR FS-SEM-0001 @9
